--- a/MarvelHeroes/Configuration/AppStore.xcconfig
+++ b/MarvelHeroes/Configuration/AppStore.xcconfig
@@ -6,5 +6,6 @@
 #include "Pods/Target Support Files/Pods-MarvelHeroes/Pods-MarvelHeroes.release.xcconfig"
 
 PRODUCT_BUNDLE_IDENTIFIER = com.pbalduz.marvel-heroes
-
 APP_DISPLAY_NAME = Marvel
+
+ENV_SWIFT_FLAG = APPSTORE
